add: divided order messages into aggressor and passive side messages

--- a/app/src/etc/config.ini
+++ b/app/src/etc/config.ini
@@ -8,8 +8,9 @@ request-port = 7001
 
 [book]
 simulate = false
-initial-best-bid = 99
-initial-best-ask = 101
+initialize = false
+initial-best-bid = 9999
+initial-best-ask = 10000
 initial-levels = 20
 initial-orders = 10
 initial-order-volume = 1
