fix: trader_id can no be also None type

--- a/app/src/etc/config.ini
+++ b/app/src/etc/config.ini
@@ -7,8 +7,8 @@ request-address = 127.0.0.1
 request-port = 7001
 
 [book]
-simulate = false
-initialize = false
+simulate = true
+initialize = true
 initial-best-bid = 9999
 initial-best-ask = 10000
 initial-levels = 20
