--- a/app/src/etc/config.ini
+++ b/app/src/etc/config.ini
@@ -7,8 +7,8 @@ request-address = 127.0.0.1
 request-port = 7001
 
 [book]
-simulate = true
-initialize = true
+simulate = false
+initialize = false
 initial-best-bid = 9999
 initial-best-ask = 10000
 initial-levels = 20
@@ -32,4 +32,4 @@ kappa_c_p = 0.25
 kappa_c_m = 0.25
 
 [display]
-style = NONE
+style = BOOK
