add: reading and parsing multiple requests from the order entry socket

--- a/app/src/etc/config.ini
+++ b/app/src/etc/config.ini
@@ -7,7 +7,7 @@ request-address = 127.0.0.1
 request-port = 7001
 
 [book]
-simulate = false
+simulate = true
 initialize = false
 initial-best-bid = 9999
 initial-best-ask = 10000
@@ -32,4 +32,4 @@ kappa_c_p = 0.25
 kappa_c_m = 0.25
 
 [display]
-style = BOOK
+style = NONE
