--- a/app/src/etc/config.ini
+++ b/app/src/etc/config.ini
@@ -7,7 +7,7 @@ request-address = 127.0.0.1
 request-port = 7001
 
 [book]
-simulate = true
+simulate = false
 initialize = false
 initial-best-bid = 9999
 initial-best-ask = 10000
